# omegram

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: +page.svelte  App.tsx  globals.css  main.js  main.tsx  styles.css
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  main.rs  tg.rs
src-tauri/src/commands/: database.rs  main.rs  mod.rs  sign.rs
src-tauri/src/helpers/: mod.rs  telegram_helper.rs
src-tauri/src/models/: dialog.rs  message.rs  mod.rs
src-tauri/src/services/: db.rs
src/lib/: cache.js  store.js
src/models/: SignState.ts
src/pages/: Login.svelte
src/pages/Code/: Code.tsx
src/pages/Phone/: Phone.tsx
src/pages/Qr/: Qr.tsx
src/utils/: store.ts
