[package]
name = "omegram"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
lazy_static = "1.4.0"
rusqlite = "0.30.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
